Fixing spacing on featured header

--- a/docroot/themes/custom/ucsf_edu/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/00-base/layouts/_default.scss
@@ -67,7 +67,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
   margin-top: 0;
 
   .article-header {
-    margin-top: -420px;
+    margin-top: -418px;
     background: #fff;
     margin-left: -230px;
     padding: 56px 56px 0 120px;
